Ajustando testes unitários e DTOs