@@ -3,9 +3,9 @@ package com.iteletric.iteletricapi.services;
 import com.iteletric.iteletricapi.config.exception.BusinessException;
 import com.iteletric.iteletricapi.dtos.budget.BudgetRequestDTO;
 import com.iteletric.iteletricapi.models.Budget;
+import com.iteletric.iteletricapi.models.User;
 import com.iteletric.iteletricapi.models.Work;
 import com.iteletric.iteletricapi.repositories.BudgetRepository;
-import com.iteletric.iteletricapi.repositories.WorkRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
@@ -13,9 +13,9 @@ import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 
-import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.List;
@@ -30,7 +30,10 @@ class BudgetServiceTest {
     private BudgetRepository budgetRepository;
 
     @Mock
-    private WorkRepository workRepository;
+    private WorkService workService;
+
+    @Mock
+    private UserService userService;
 
     @InjectMocks
     private BudgetService budgetService;
@@ -41,130 +44,115 @@ class BudgetServiceTest {
     }
 
     @Test
-    void testCreateBudgetSuccess() {
-        BudgetRequestDTO budgetRequestDTO = new BudgetRequestDTO();
-        budgetRequestDTO.setWorkIdList(Arrays.asList(1L, 2L));
-        budgetRequestDTO.setDeliveryForecast(LocalDate.of(2024, 12, 31));
+    void createBudgetSuccess() {
+        BudgetRequestDTO requestDTO = new BudgetRequestDTO();
+        requestDTO.setWorkIdList(Arrays.asList(1L, 2L));
+        requestDTO.setCustomerId(1L);
+        requestDTO.setDeliveryForecast(LocalDate.now());
 
-        List<Work> workList = Arrays.asList(
-                Work.builder().id(1L).price(BigDecimal.valueOf(500)).build(),
-                Work.builder().id(2L).price(BigDecimal.valueOf(600)).build()
-        );
+        List<Work> workList = Arrays.asList(new Work(), new Work());
+        User customer = new User();
 
-        when(workRepository.findAllById(budgetRequestDTO.getWorkIdList())).thenReturn(workList);
-        when(budgetRepository.save(any(Budget.class))).thenReturn(Budget.builder().id(1L).build());
+        when(workService.getAllWorkSelectedById(anyList())).thenReturn(workList);
+        when(userService.getUserById(anyLong())).thenReturn(customer);
 
-        Budget result = budgetService.create(budgetRequestDTO);
+        Budget savedBudget = Budget.builder()
+                .workList(workList)
+                .customer(customer)
+                .deliveryForecast(requestDTO.getDeliveryForecast())
+                .build();
+
+        when(budgetRepository.save(any(Budget.class))).thenReturn(savedBudget);
+
+        Budget result = budgetService.create(requestDTO);
 
         assertNotNull(result);
-        assertEquals(1L, result.getId());
-        verify(budgetRepository).save(any(Budget.class));
+        assertEquals(savedBudget, result);
+        verify(budgetRepository, times(1)).save(any(Budget.class));
+        verify(workService, times(1)).getAllWorkSelectedById(requestDTO.getWorkIdList());
+        verify(userService, times(1)).getUserById(requestDTO.getCustomerId());
     }
 
     @Test
-    void testCreateBudgetNoWorksFound() {
-        BudgetRequestDTO budgetRequestDTO = new BudgetRequestDTO();
-        budgetRequestDTO.setWorkIdList(Arrays.asList(1L, 2L));
-
-        when(workRepository.findAllById(budgetRequestDTO.getWorkIdList())).thenReturn(Arrays.asList());
-
-        BusinessException exception = assertThrows(BusinessException.class, () -> budgetService.create(budgetRequestDTO));
-        assertEquals("Nenhum trabalho encontrado com os IDs fornecidos", exception.getMessage());
-    }
-
-    @Test
-    void testUpdateBudgetSuccess() {
+    void updateBudgetSuccess() {
         Long budgetId = 1L;
-        BudgetRequestDTO budgetRequestDTO = new BudgetRequestDTO();
-        budgetRequestDTO.setWorkIdList(Arrays.asList(1L, 2L));
-        budgetRequestDTO.setDeliveryForecast(LocalDate.of(2024, 12, 31));
+        BudgetRequestDTO requestDTO = new BudgetRequestDTO();
+        requestDTO.setWorkIdList(Arrays.asList(1L, 2L));
+        requestDTO.setCustomerId(1L);
+        requestDTO.setDeliveryForecast(LocalDate.now());
 
-        List<Work> workList = Arrays.asList(
-                Work.builder().id(1L).price(BigDecimal.valueOf(500)).build(),
-                Work.builder().id(2L).price(BigDecimal.valueOf(600)).build()
-        );
-
-        Budget existingBudget = Budget.builder().id(budgetId).build();
+        Budget existingBudget = new Budget();
+        List<Work> workList = Arrays.asList(new Work(), new Work());
+        User customer = new User();
 
         when(budgetRepository.findById(budgetId)).thenReturn(Optional.of(existingBudget));
-        when(workRepository.findAllById(budgetRequestDTO.getWorkIdList())).thenReturn(workList);
+        when(workService.getAllWorkSelectedById(anyList())).thenReturn(workList);
+        when(userService.getUserById(anyLong())).thenReturn(customer);
         when(budgetRepository.save(any(Budget.class))).thenReturn(existingBudget);
 
-        Budget updatedBudget = budgetService.update(budgetId, budgetRequestDTO);
+        Budget result = budgetService.update(budgetId, requestDTO);
 
-        assertNotNull(updatedBudget);
-        assertEquals(budgetId, updatedBudget.getId());
-        verify(budgetRepository).save(existingBudget);
+        assertNotNull(result);
+        verify(budgetRepository, times(1)).save(existingBudget);
+        verify(workService, times(1)).getAllWorkSelectedById(requestDTO.getWorkIdList());
+        verify(userService, times(1)).getUserById(requestDTO.getCustomerId());
     }
 
     @Test
-    void testUpdateBudgetNotFound() {
+    void deleteBudgetSuccess() {
         Long budgetId = 1L;
-        BudgetRequestDTO budgetRequestDTO = new BudgetRequestDTO();
-        budgetRequestDTO.setWorkIdList(Arrays.asList(1L, 2L));
+        Budget existingBudget = new Budget();
 
-        when(budgetRepository.findById(budgetId)).thenReturn(Optional.empty());
-
-        BusinessException exception = assertThrows(BusinessException.class, () -> budgetService.update(budgetId, budgetRequestDTO));
-        assertEquals("Orçamento não encontrado", exception.getMessage());
-    }
-
-    @Test
-    void testDeleteBudgetSuccess() {
-        Long budgetId = 1L;
-        Budget budget = Budget.builder().id(budgetId).build();
-
-        when(budgetRepository.findById(budgetId)).thenReturn(Optional.of(budget));
+        when(budgetRepository.findById(budgetId)).thenReturn(Optional.of(existingBudget));
 
         budgetService.delete(budgetId);
 
-        verify(budgetRepository).delete(budget);
+        verify(budgetRepository, times(1)).delete(existingBudget);
     }
 
     @Test
-    void testDeleteBudgetNotFound() {
+    void deleteBudgetNotFound() {
         Long budgetId = 1L;
 
         when(budgetRepository.findById(budgetId)).thenReturn(Optional.empty());
 
-        BusinessException exception = assertThrows(BusinessException.class, () -> budgetService.delete(budgetId));
-        assertEquals("Orçamento não encontrado", exception.getMessage());
+        assertThrows(BusinessException.class, () -> budgetService.delete(budgetId));
     }
 
     @Test
-    void testGetByIdSuccess() {
+    void getByIdBudgetSuccess() {
         Long budgetId = 1L;
-        Budget budget = Budget.builder().id(budgetId).build();
+        Budget budget = new Budget();
 
         when(budgetRepository.findById(budgetId)).thenReturn(Optional.of(budget));
 
         Budget result = budgetService.getById(budgetId);
 
         assertNotNull(result);
-        assertEquals(budgetId, result.getId());
+        verify(budgetRepository, times(1)).findById(budgetId);
     }
 
     @Test
-    void testGetByIdNotFound() {
+    void getByIdBudgetNotFound() {
         Long budgetId = 1L;
 
         when(budgetRepository.findById(budgetId)).thenReturn(Optional.empty());
 
-        BusinessException exception = assertThrows(BusinessException.class, () -> budgetService.getById(budgetId));
-        assertEquals("Orçamento não encontrado", exception.getMessage());
+        assertThrows(BusinessException.class, () -> budgetService.getById(budgetId));
     }
 
     @Test
-    void testListBudgets() {
-        Pageable pageable = mock(Pageable.class);
-        List<Budget> budgetList = Arrays.asList(Budget.builder().id(1L).build(), Budget.builder().id(2L).build());
-        Page<Budget> budgetPage = new PageImpl<>(budgetList);
+    void listBudgetsSuccess() {
+        Pageable pageable = PageRequest.of(0, 10);
+        Budget budget = new Budget();
+        Page<Budget> page = new PageImpl<>(List.of(budget));
 
-        when(budgetRepository.findAll(pageable)).thenReturn(budgetPage);
+        when(budgetRepository.findAll(pageable)).thenReturn(page);
 
         Page<Budget> result = budgetService.list(pageable);
 
         assertNotNull(result);
-        assertEquals(2, result.getTotalElements());
+        assertEquals(1, result.getTotalElements());
+        verify(budgetRepository, times(1)).findAll(pageable);
     }
 }
